--- a/index.html
+++ b/index.html
@@ -1,54 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>单词默写本（上传词库版）</title>
+  <meta charset="UTF-8">
+  <title>单词默写本</title>
   <style>
-    body { font-family: sans-serif; padding: 20px; max-width: 600px; margin: auto; }
-    input[type="text"], input[type="file"] { width: 100%; padding: 10px; margin-top: 10px; }
-    button { padding: 10px 20px; margin-top: 10px; }
-    .progress { margin-top: 10px; font-weight: bold; }
+    body { font-family: sans-serif; padding: 20px; max-width: 500px; margin: auto; }
+    input[type="text"] { width: 100%; padding: 8px; margin-top: 10px; }
+    button { padding: 8px 16px; margin-top: 10px; }
     .result { margin-top: 10px; }
+    .progress { margin-top: 10px; font-weight: bold; }
   </style>
 </head>
 <body>
 
-  <h2>📘 单词默写（支持上传词库 JSON 文件）</h2>
-
-  <input type="file" id="fileInput" accept=".json" />
-  <div class="progress" id="progress">请先上传词库</div>
-  <div id="word-area"></div>
-
-  <input type="text" id="answer" placeholder="请输入英文单词" style="display: none;">
-  <button onclick="checkAnswer()" style="display: none;">提交</button>
+  <h2>单词默写</h2>
+  <div class="progress" id="progress">进度：0/0</div>
+  <div id="word-area">加载中...</div>
+  <input type="text" id="answer" placeholder="请输入英文单词" autocomplete="off">
+  <button onclick="checkAnswer()">提交</button>
   <div class="result" id="result"></div>
 
   <script>
     let wordList = [];
     let currentIndex = 0;
 
-    document.getElementById('fileInput').addEventListener('change', function (event) {
-      const file = event.target.files[0];
-      if (!file) return;
-
-      const reader = new FileReader();
-      reader.onload = function (e) {
-        try {
-          wordList = JSON.parse(e.target.result);
-          wordList = shuffleArray(wordList);
-          currentIndex = 0;
-          showWord();
-          updateProgress();
-          document.getElementById('answer').style.display = 'block';
-          document.querySelector("button").style.display = 'inline-block';
-        } catch (err) {
-          document.getElementById('progress').innerText = '❌ 无法解析 JSON 文件';
-        }
-      };
-      reader.readAsText(file, 'UTF-8');
-    });
+    async function loadWords() {
+      const response = await fetch('Words.json');
+      const data = await response.json();
+      wordList = shuffleArray(data); // 打乱顺序
+      showWord();
+      updateProgress();
+    }
 
     function shuffleArray(array) {
+      // Fisher-Yates 洗牌算法
       for (let i = array.length - 1; i > 0; i--) {
         const j = Math.floor(Math.random() * (i + 1));
         [array[i], array[j]] = [array[j], array[i]];
@@ -58,17 +43,15 @@
 
     function showWord() {
       if (currentIndex >= wordList.length) {
-        document.getElementById("word-area").innerText = "🎉 全部完成！";
+        document.getElementById("word-area").innerText = "🎉 恭喜你完成了全部单词！";
         document.getElementById("answer").style.display = "none";
         document.querySelector("button").style.display = "none";
-        updateProgress();
         return;
       }
       const word = wordList[currentIndex];
       document.getElementById("word-area").innerText = "中文: " + word.zh;
       document.getElementById("answer").value = "";
       document.getElementById("result").innerText = "";
-      updateProgress();
     }
 
     function updateProgress() {
@@ -83,11 +66,16 @@
       if (input === correct) {
         document.getElementById("result").innerText = "✅ 正确！";
         currentIndex++;
-        setTimeout(showWord, 800);
+        setTimeout(() => {
+          showWord();
+          updateProgress();
+        }, 800);
       } else {
         document.getElementById("result").innerText = `❌ 错了，正确答案是：${correct}`;
       }
     }
+
+    loadWords();
   </script>
 
 </body>
