--- a/index.html
+++ b/index.html
@@ -125,27 +125,27 @@
             <h1>Quaderno di Vocaboli 📚</h1>
             <div class="settings">
                 <select id="groupSelect">
-                    <option value="-1">Tutte le parole (126) 🌐</option>
-                    <option value="0">Gruppo 1 (6) 🥇</option>
-                    <option value="1">Gruppo 2 (6) 🥈</option>
-                    <option value="2">Gruppo 3 (6) 🥉</option>
-                    <option value="3">Gruppo 4 (6) ⭐</option>
-                    <option value="4">Gruppo 5 (6) 🌟</option>
-                    <option value="5">Gruppo 6 (6) 🚀</option>
-                    <option value="6">Gruppo 7 (6) 🎯</option>
-                    <option value="7">Gruppo 8 (6) 🔔</option>
-                    <option value="8">Gruppo 9 (6) 🎈</option>
-                    <option value="9">Gruppo 10 (6) 🎉</option>
-                    <option value="10">Gruppo 11 (6) 🍎</option>
-                    <option value="11">Gruppo 12 (6) 🍊</option>
-                    <option value="12">Gruppo 13 (6) 🍋</option>
-                    <option value="13">Gruppo 14 (6) 🍉</option>
-                    <option value="14">Gruppo 15 (7) 🍒</option>
-                    <option value="15">Gruppo 16 (7) 🍓</option>
-                    <option value="16">Gruppo 17 (7) 🍇</option>
-                    <option value="17">Gruppo 18 (7) 🍍</option>
-                    <option value="18">Gruppo 19 (7) 🥭</option>
-                    <option value="19">Gruppo 20 (7) 🥑</option>
+                    <option value="-1">Tutte le parole (235) 🌐</option>
+                    <option value="0">Gruppo 1 (12) 🥇</option>
+                    <option value="1">Gruppo 2 (12) 🥈</option>
+                    <option value="2">Gruppo 3 (12) 🥉</option>
+                    <option value="3">Gruppo 4 (12) ⭐</option>
+                    <option value="4">Gruppo 5 (12) 🌟</option>
+                    <option value="5">Gruppo 6 (12) 🚀</option>
+                    <option value="6">Gruppo 7 (12) 🎯</option>
+                    <option value="7">Gruppo 8 (12) 🔔</option>
+                    <option value="8">Gruppo 9 (12) 🎈</option>
+                    <option value="9">Gruppo 10 (12) 🎉</option>
+                    <option value="10">Gruppo 11 (12) 🍎</option>
+                    <option value="11">Gruppo 12 (12) 🍊</option>
+                    <option value="12">Gruppo 13 (12) 🍋</option>
+                    <option value="13">Gruppo 14 (12) 🍉</option>
+                    <option value="14">Gruppo 15 (12) 🍒</option>
+                    <option value="15">Gruppo 16 (11) 🍓</object>
+                    <option value="16">Gruppo 17 (11) 🍇</option>
+                    <option value="17">Gruppo 18 (11) 🍍</option>
+                    <option value="18">Gruppo 19 (11) 🥭</option>
+                    <option value="19">Gruppo 20 (11) 🥑</option>
                 </select>
                 <select id="modeSelect">
                     <option value="zh2en">Cinese → Italiano 🇮🇹</option>
@@ -186,9 +186,7 @@
                 { "en": "lavoro", "zh": "工作" },
                 { "en": "casa", "zh": "房子" },
                 { "en": "negozio", "zh": "商店" },
-                { "en": "cibo", "zh": "食物" }
-            ],
-            [
+                { "en": "cibo", "zh": "食物" },
                 { "en": "acqua", "zh": "水" },
                 { "en": "pane", "zh": "面包" },
                 { "en": "latte", "zh": "牛奶" },
@@ -202,9 +200,7 @@
                 { "en": "settimana", "zh": "星期" },
                 { "en": "mese", "zh": "月份" },
                 { "en": "anno", "zh": "年" },
-                { "en": "minuto", "zh": "分钟" }
-            ],
-            [
+                { "en": "minuto", "zh": "分钟" },
                 { "en": "secondo", "zh": "秒" },
                 { "en": "chiave", "zh": "钥匙" },
                 { "en": "soldi", "zh": "钱" },
@@ -218,9 +214,7 @@
                 { "en": "malattia", "zh": "疾病" },
                 { "en": "febbre", "zh": "发烧" },
                 { "en": "dolore", "zh": "疼痛" },
-                { "en": "gatto", "zh": "猫" }
-            ],
-            [
+                { "en": "gatto", "zh": "猫" },
                 { "en": "uccello", "zh": "鸟" },
                 { "en": "formaggio", "zh": "奶酪" },
                 { "en": "frutta", "zh": "水果" },
@@ -234,9 +228,7 @@
                 { "en": "letto", "zh": "床" },
                 { "en": "finestra", "zh": "窗户" },
                 { "en": "porta", "zh": "门" },
-                { "en": "colore", "zh": "颜色" }
-            ],
-            [
+                { "en": "colore", "zh": "颜色" },
                 { "en": "rosso", "zh": "红色" },
                 { "en": "verde", "zh": "绿色" },
                 { "en": "blu", "zh": "蓝色" },
@@ -250,9 +242,7 @@
                 { "en": "grigio", "zh": "灰色" },
                 { "en": "treno", "zh": "火车" },
                 { "en": "aereo", "zh": "飞机" },
-                { "en": "autobus", "zh": "公交车" }
-            ],
-            [
+                { "en": "autobus", "zh": "公交车" },
                 { "en": "bicicletta", "zh": "自行车" },
                 { "en": "metropolitana", "zh": "地铁" },
                 { "en": "biglietto", "zh": "票" },
@@ -266,9 +256,7 @@
                 { "en": "scarpe", "zh": "鞋子" },
                 { "en": "giacca", "zh": "夹克" },
                 { "en": "camicia", "zh": "衬衫" },
-                { "en": "pantaloni", "zh": "裤子" }
-            ],
-            [
+                { "en": "pantaloni", "zh": "裤子" },
                 { "en": "vestito", "zh": "连衣裙" },
                 { "en": "calze", "zh": "袜子" },
                 { "en": "occhiali", "zh": "眼镜" },
@@ -282,9 +270,7 @@
                 { "en": "bambino", "zh": "小孩" },
                 { "en": "ragazzo", "zh": "男孩" },
                 { "en": "ragazza", "zh": "女孩" },
-                { "en": "donna", "zh": "女人" }
-            ],
-            [
+                { "en": "donna", "zh": "女人" },
                 { "en": "uomo", "zh": "男人" },
                 { "en": "famiglia", "zh": "家庭" },
                 { "en": "genitori", "zh": "父母" },
@@ -299,52 +285,175 @@
                 { "en": "cugino", "zh": "堂兄弟" },
                 { "en": "cugina", "zh": "堂姐妹" },
                 { "en": "marito", "zh": "丈夫" },
-                { "en": "moglie", "zh": "妻子" }
-            ],
-            [
+                { "en": "moglie", "zh": "妻子" },
                 { "en": "Intelligenza artificiale", "zh": "人工智能" },
                 { "en": "E-commerce", "zh": "电子商务" },
                 { "en": "Pagamento online", "zh": "在线支付" },
                 { "en": "Forum", "zh": "论坛" },
-                { "en": "Influencer", "zh": "网红" },
-                { "en": "Mi piace", "zh": "点赞" },
-                { "en": "Commento", "zh": "评论" }
+                { "en": "Influencer", "zh": "网红" }
             ],
             [
+                { "en": "Mi piace", "zh": "点赞" },
+                { "en": "Commento", "zh": "评论" },
                 { "en": "Notifica", "zh": "通知" },
                 { "en": "Risoluzione", "zh": "分辨率" },
                 { "en": "Pixelato", "zh": "马赛克化" },
                 { "en": "pioggia", "zh": "雨" },
                 { "en": "neve", "zh": "雪" },
                 { "en": "vento", "zh": "风" },
-                { "en": "tempo", "zh": "天气" }
-            ],
-            [
+                { "en": "tempo", "zh": "天气" },
                 { "en": "giorno", "zh": "日" },
                 { "en": "notte", "zh": "夜" },
-                { "en": "mattina", "zh": "早晨" },
+                { "en": "mattina", "zh": "早晨" }
+            ],
+            [
                 { "en": "nipote", "zh": "孙子/侄子" },
                 { "en": "animale", "zh": "动物" },
                 { "en": "cane", "zh": "狗" },
-                { "en": "camera", "zh": "房间" }
-            ],
-            [
+                { "en": "camera", "zh": "房间" },
                 { "en": "valigia", "zh": "行李" },
                 { "en": "documento", "zh": "证件" },
                 { "en": "passaporto", "zh": "护照" },
                 { "en": "vacanza", "zh": "假期" },
                 { "en": "viaggio", "zh": "旅行" },
                 { "en": "mare", "zh": "海" },
-                { "en": "montagna", "zh": "山" }
+                { "en": "montagna", "zh": "山" },
+                { "en": "spiaggia", "zh": "沙滩" }
             ],
             [
-                { "en": "spiaggia", "zh": "沙滩" },
                 { "en": "sole", "zh": "太阳" },
-                { "en": "strada", "zh": "街道" },
-                { "en": "stazione", "zh": "车站" },
-                { "en": "mappa", "zh": "地图" },
-                { "en": "hotel", "zh": "旅馆" },
-                { "en": "orologio", "zh": "钟表" }
+                { "en": "Gennaio", "zh": "一月" },
+                { "en": "Febbraio", "zh": "二月" },
+                { "en": "Marzo", "zh": "三月" },
+                { "en": "Aprile", "zh": "四月" },
+                { "en": "Maggio", "zh": "五月" },
+                { "en": "Giugno", "zh": "六月" },
+                { "en": "Luglio", "zh": "七月" },
+                { "en": "Agosto", "zh": "八月" },
+                { "en": "Settembre", "zh": "九月" },
+                { "en": "Ottobre", "zh": "十月" },
+                { "en": "Novembre", "zh": "十一月" }
+            ],
+            [
+                { "en": "Dicembre", "zh": "十二月" },
+                { "en": "Prezzo", "zh": "价格" },
+                { "en": "Contanti", "zh": "现金" },
+                { "en": "Carta di credito", "zh": "信用卡" },
+                { "en": "Scontrino", "zh": "小票" },
+                { "en": "Ricevuta", "zh": "发票" },
+                { "en": "Offerta", "zh": "特价 / 优惠" },
+                { "en": "Sconto", "zh": "折扣" },
+                { "en": "Taglia", "zh": "尺码（衣物）" },
+                { "en": "Misura", "zh": "尺寸" },
+                { "en": "Chilo", "zh": "千克" },
+                { "en": "Grammo", "zh": "克" }
+            ],
+            [
+                { "en": "Litro", "zh": "升" },
+                { "en": "Pacco", "zh": "包（package）" },
+                { "en": "Bottiglia", "zh": "瓶" },
+                { "en": "Scatola", "zh": "盒子" },
+                { "en": "Barattolo", "zh": "罐子" },
+                { "en": "Fresco", "zh": "新鲜的" },
+                { "en": "Correre", "zh": "跑" },
+                { "en": "Camminare", "zh": "走路" },
+                { "en": "Entrare", "zh": "进入" },
+                { "en": "Uscire", "zh": "出去" },
+                { "en": "Salire", "zh": "上去" },
+                { "en": "Scendere", "zh": "下去" }
+            ],
+            [
+                { "en": "Portare", "zh": "带、拿" },
+                { "en": "Mettere", "zh": "放置" },
+                { "en": "Aprire", "zh": "打开" },
+                { "en": "Chiudere", "zh": "关闭" },
+                { "en": "Pensare", "zh": "思考" },
+                { "en": "Sapere", "zh": "知道（to know a fact）" },
+                { "en": "Conoscere", "zh": "认识、了解（to be familiar with）" },
+                { "en": "Capire", "zh": "明白、理解" },
+                { "en": "Ricordare", "zh": "记得" },
+                { "en": "Dimenticare", "zh": "忘记" },
+                { "en": "Imparare", "zh": "学习" },
+                { "en": "Insegnare", "zh": "教" }
+            ],
+            [
+                { "en": "Decidere", "zh": "决定" },
+                { "en": "Volere", "zh": "想要（to want）" },
+                { "en": "Parlare", "zh": "说话" },
+                { "en": "Chiedere", "zh": "询问" },
+                { "en": "Rispondere", "zh": "回答" },
+                { "en": "Telefonare", "zh": "打电话" },
+                { "en": "Scrivere", "zh": "写" },
+                { "en": "Leggere", "zh": "读" },
+                { "en": "Ascoltare", "zh": "听" },
+                { "en": "Spiegare", "zh": "解释" },
+                { "en": "Ridere", "zh": "笑" },
+                { "en": "Piangere", "zh": "哭" }
+            ],
+            [
+                { "en": "Dormire", "zh": "睡觉" },
+                { "en": "Alzarsi", "zh": "起床（反身动词）" },
+                { "en": "Lavarsi", "zh": "洗澡（反身动词）" },
+                { "en": "Vestirsi", "zh": "穿衣（反身动词）" },
+                { "en": "Comprare", "zh": "买" },
+                { "en": "Pagare", "zh": "付款" },
+                { "en": "Lavorare", "zh": "工作" },
+                { "en": "Studiare", "zh": "学习" },
+                { "en": "Vivere", "zh": "生活 / 居住" },
+                { "en": "Amare", "zh": "爱" },
+                { "en": "Bello", "zh": "漂亮的 / 美丽的" }
+            ],
+            [
+                { "en": "Brutto", "zh": "丑的 / 糟的" },
+                { "en": "Grande", "zh": "大的" },
+                { "en": "Piccolo", "zh": "小的" },
+                { "en": "Alto", "zh": "高的" },
+                { "en": "Basso", "zh": "矮的 / 低的" },
+                { "en": "Lungo", "zh": "长的" },
+                { "en": "Corto", "zh": "短的" },
+                { "en": "Vecchio", "zh": "老的 / 旧的" },
+                { "en": "Giovane", "zh": "年轻的" },
+                { "en": "Intelligente", "zh": "聪明的" },
+                { "en": "Stupido", "zh": "愚蠢的" }
+            ],
+            [
+                { "en": "Gentile", "zh": "有礼貌的 / 温和的" },
+                { "en": "Cattivo", "zh": "坏的 / 恶的" },
+                { "en": "Buono", "zh": "好的 / 善良的" },
+                { "en": "Triste", "zh": "悲伤的" },
+                { "en": "Felice", "zh": "快乐的" },
+                { "en": "Arrabbiato", "zh": "生气的" },
+                { "en": "Timido", "zh": "害羞的" },
+                { "en": "Socievole", "zh": "外向的" },
+                { "en": "Stanco", "zh": "累的" },
+                { "en": "Malato", "zh": "生病的" },
+                { "en": "Caldo", "zh": "热的" }
+            ],
+            [
+                { "en": "Freddo", "zh": "冷的" },
+                { "en": "Affamato", "zh": "饿的" },
+                { "en": "Assetato", "zh": "渴的" },
+                { "en": "Occupato", "zh": "忙的 / 占有 /占用" },
+                { "en": "Libero", "zh": "空闲的" },
+                { "en": "Pulito", "zh": "干净的" },
+                { "en": "Sporco", "zh": "脏的" },
+                { "en": "Facile", "zh": "简单的" },
+                { "en": "Difficile", "zh": "困难的" },
+                { "en": "Veloce", "zh": "快的" },
+                { "en": "Lento", "zh": "慢的" }
+            ],
+            [
+                { "en": "Nuovo", "zh": "新的" },
+                { "en": "Antico", "zh": "古老的" },
+                { "en": "Importante", "zh": "重要的" },
+                { "en": "Interessante", "zh": "有趣的" },
+                { "en": "Noioso", "zh": "无聊的" },
+                { "en": "Utile", "zh": "有用的" },
+                { "en": "Ricco", "zh": "富有的" },
+                { "en": "Povero", "zh": "贫穷的" },
+                { "en": "Caro", "zh": "贵的 / 亲爱的" },
+                { "en": "Economico", "zh": "实惠的" },
+                { "en": "Pronto", "zh": "准备好的" }
             ]
         ];
 
