--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
                 { "en": "viaggio", "zh": "旅行" },
                 { "en": "mare", "zh": "海" },
                 { "en": "montagna", "zh": "山" },
-                { "en": "spiaggia", "zh": "沙滩" }
+                { "en": "spiaggia", "zh": "沙滩" },
             ],
             [
                 { "en": "Gennaio", "zh": "一月" },
